# Undore-RBAC

./: .gitignore  LICENSE  README.md  ascender.json  changelog.md  pyproject.toml
src/: bootstrap.py  main.py  routes.py  settings.py
src/controllers/: controllers_module.py  main_controller.py
src/entities/: permissions.py  users.py
src/rbac/: base_manager.py  exceptions.py  rbac_controller.py  rbac_exception_handler_service.py  rbac_guard.py  rbac_module.py
src/rbac/interfaces/: config.py
src/rbac/processes/: gate.py
src/rbac/services/: rbac_service.py
src/rbac/types/: rbac_map.py
src/shared/: custom_rbac_manager.py
src/shared/rbac/: base_manager.py  exceptions.py  logger.py  rbac_controller.py  rbac_default_map.py  rbac_exception_handler_service.py  rbac_guard.py  rbac_module.py  rbac_service.py
src/shared/rbac/interfaces/: config.py  permissions.py
src/shared/rbac/processes/: gate.py
src/shared/rbac/services/: rbac_service.py
src/shared/rbac/types/: map.py  rbac_map.py
src/shared/rbac/utils/: _yaml.py
src/undore_rbac/: base_manager.py  exceptions.py  rbac_controller.py  rbac_default_map.py  rbac_exception_handler_service.py  rbac_guard.py  rbac_module.py
src/undore_rbac/interfaces/: config.py  permissions.py
src/undore_rbac/processes/: gate.py
src/undore_rbac/services/: rbac_service.py
src/undore_rbac/types/: rbac_map.py
src/undore_rbac/utils/: yaml_reader.py
