[tool.poetry]
name = "undore-rbac"
version = "1.0"
description = "RBAC System for Ascender Framework from Undore!"
authors = ["Undore <flora.wolf4024@eagereverest.com>"]
readme = "README.md"
package-mode = true
packages = [{include="rbac", from="src"}]


[tool.poetry.dependencies]
python = ">=3.11,<3.14"
ascender-framework = "^2.0rc6"
pyyaml = "^6.0.2"
pyjwt = "^2.10.1"
ascender = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
