[tool.poetry]
name = "undore-rbac"
version = "1.1.5"
description = "RBAC System for Ascender Framework from Undore!"
authors = ["Undore <flora.wolf4024@eagereverest.com>"]
readme = "README.md"
package-mode = true
packages = [{include="undore_rbac", from="src"}]


[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyyaml = "^6.0.2"
pyjwt = "^2.10.1"
ascender = "^0.2.0"
packaging = "^26.0"
ascender-framework = "2.1.0"
pytz = "^2025.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
